toolchain/internal/core/analysis/testdata/errors/consts/array_mixed_types.vdl
// @expect: E207

const mixed = [1 "two" 3]
